--- a/assets/style.css
+++ b/assets/style.css
@@ -2,5 +2,10 @@
     height: 100%;
     width: 50%;
     margin: 0 auto;
-    display: flex;
+    display: block;
+}
+
+.quiz-start-box button {
+    margin: 0 auto;
+    display: block;
 }
