--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .quiz-start-box {
     height: 100%;
     width: 50%;
@@ -6,7 +12,10 @@
     text-align: center;
 }
 
-.quiz-start-box button {
-    margin: 0 auto;
-    display: block;
+.top-header p {
+    float: right;
+}
+
+.main-outer-container {
+    padding: 10px;
 }
