--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.main-outer-container {
+    padding: 10px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
 }
 
 .quiz-start-box {
@@ -10,12 +19,15 @@
     margin: 0 auto;
     display: block;
     text-align: center;
+    margin-top: 25vh;
 }
 
 .top-header p {
     float: right;
 }
 
-.main-outer-container {
-    padding: 10px;
+.inside-container {
+    height: 100%;
+    width: 50%;
+    margin: 0 auto;
 }
