--- a/assets/style.css
+++ b/assets/style.css
@@ -45,3 +45,35 @@
 .hide {
     display: none;
 }
+
+#question-container {
+    display: block;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 50%;
+  }
+  
+  .question {
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  
+  .btn {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    text-align: center;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .btn:hover {
+    background-color: rgb(9, 189, 221);
+  }
+  
