--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,7 @@
     background-color: rgb(9, 189, 221);
 }
 
-.hide {
+#question-container.hide {
     display: none;
 }
 
@@ -75,5 +75,38 @@
   
   .btn:hover {
     background-color: rgb(9, 189, 221);
+  }
+  
+  /* All done page */
+.all-done-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+  
+  .all-done-header {
+    font-size: 32px;
+    margin-bottom: 20px;
+  }
+  
+  .final-score {
+    font-size: 24px;
+    margin-bottom: 30px;
+  }
+  
+  .restart-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: rgb(9, 189, 221);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .restart-button:hover {
+    background-color: #0b98b3;
   }
   
